fix: Hidden Java Field is shwon duplicated
Fixes: #3197
Since Java hidden field is generally a bad practice and doesn't work well together with AtlasMap path expression, we'll simply ignore it.